# fin-classifier

./: .gitignore  README.md  pyproject.toml  pytest.ini
src/fin_classifier/: __init__.py  classifier.py  conditions.py  models.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  test_classifier.py  test_describe.py  test_edge_cases.py
tests/unit/: __init__.py  test_amount_conditions.py  test_logical_operators.py  test_models.py  test_rules.py  test_text_conditions.py
