[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fin_classifier"]

[project]
name = "fin-classifier"
version = "0.1.2"
description = "Motor de classificação inteligente de linhas de extrato bancário com suporte a PyOdide"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Thomaz Pougy", email = "thomazpougy@gmail.com"}
]
maintainers = [
    {name = "Thomaz Pougy", email = "thomazpougy@gmail.com"}
]
requires-python = ">=3.12"
keywords = ["classifier", "banking", "transactions", "pyodide", "chain-of-rule"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: Portuguese (Brazilian)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Office/Business :: Financial",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.4.2",
    "pytest-xdist>=3.5.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",
    "pytest-benchmark>=4.0.0",
    "ruff>=0.6.0",
    "mypy>=1.10.0",
    "black>=24.0.0",
]
test = [
    "pytest>=8.4.2",
    "pytest-xdist>=3.5.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",
    "pytest-benchmark>=4.0.0",
]
pyodide = [
    # Compatível com PyOdide - sem dependências externas
]

[project.urls]
Homepage = "https://github.com/tpougy/fin-classifier"
Repository = "https://github.com/tpougy/fin-classifier"
Documentation = "https://github.com/tpougy/fin-classifier#readme"
"Bug Tracker" = "https://github.com/tpougy/fin-classifier/issues"

[dependency-groups]
dev = [
    "hatchling>=1.27.0",
    "pytest-benchmark>=5.2.2",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
    "pytest-xdist>=3.8.0",
    "twine>=6.2.0",
]

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]
 
 
# Same as Black.
line-length = 120
indent-width = 4
 
# Assume Python 3.12
target-version = "py312"
 
[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
 
select = [
    "ALL", # include all the rules, including new ones
]
 
ignore = [
    #### modules
    "ANN", # flake8-annotations
    "COM", # flake8-commas
    "C90", # mccabe complexity
    "DJ",  # django
    "EXE", # flake8-executable
    "T10", # debugger
    "TID", # flake8-tidy-imports
 
    #### specific rules
    "D100",   # ignore missing docs
    "D101",
    "D102",
    "D103",
    "D104",
    "D105",
    "D106",
    "D107",
    "D200",
    "D205",
    "D212",
    "D400",
    "D401",
    "D415",
    "E402",     # false positives for local imports
    "E501",     # line too long
    "F403",     # wildcard import
    "TRY003",   # external messages in exceptions are too verbose
    "TD002",
    "TD003",
    "FIX002",   # too verbose descriptions of todos
    "PLR0913",  # too many arguments in function
    "DTZ005",   # datetime without tz argument is not allowed
    "DTZ007",   # call-datetime-strptime-without-zone
    "DTZ001",
    "TRY400",   # cannot use logger.error when cathing exceptions
    "UP007",    # cannot use Optional[]
    "S101",     # assert não permitido
    "G004",
    "FBT001",
    "FBT002",
    "T201",
]
# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []
 
# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
 
[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"
 
# Like Black, indent with spaces, rather than tabs.
indent-style = "space"
 
# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false
 
# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"
 
# Enable auto-formatting of code examples in docstrings. Markdown,
# reStructuredText code/literal blocks and doctests are all supported.
#
# This is currently disabled by default, but it is planned for this
# to be opt-out in the future.
docstring-code-format = true
 
# Set the line length limit used when formatting code snippets in
# docstrings.
#
# This only has an effect when the `docstring-code-format` setting is
# enabled.
docstring-code-line-length = "dynamic"

# ===== CONFIGURAÇÃO DO PYTEST =====

[tool.pytest.ini_options]
# Diretório de testes
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

# Opções de linha de comando padrão
addopts = [
    "-v",                          # verbose
    "--strict-markers",            # falha em markers desconhecidos
    "--tb=short",                  # traceback curto
    "--disable-warnings",          # suprime warnings
    "-p", "no:cacheprovider",      # desabilita cache (útil para CI)
    "--cov=src",                   # cobertura no diretório src
    "--cov-report=term-missing",   # relatório com linhas não cobertas
    "--cov-report=html",           # relatório HTML
    "--cov-report=xml",            # relatório XML para CI/CD
]

# Marcadores customizados
markers = [
    "slow: marca testes como lentos",
    "integration: marca testes de integração",
    "unit: marca testes unitários",
    "smoke: marca testes de smoke test",
]

# Filtros de warning
filterwarnings = [
    "ignore::DeprecationWarning",
]

# Timeout de testes (em segundos)
timeout = 10

# Logging
log_cli = true
log_cli_level = "WARNING"

# ===== CONFIGURAÇÃO DO MYPY =====

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true

[[tool.mypy.overrides]]
module = [
    "pytest.*",
    "setuptools.*",
]
ignore_missing_imports = true

# ===== CONFIGURAÇÃO DO BLACK =====

[tool.black]
line-length = 120
target-version = ["py312"]
include = '\.pyi?$'
extend-exclude = '''
/(
  # diretórios
  \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

# ===== CONFIGURAÇÃO DO COVERAGE =====

[tool.coverage.run]
source = ["src"]
branch = true
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]

[tool.coverage.html]
directory = "htmlcov"
